--- a/templates/about.html
+++ b/templates/about.html
@@ -1,13 +1,23 @@
-{% extends 'base.html' %} {% block body%}
-
-<h1>About</h1>
-<p>
-  Sanlam Platinum Plus ia an innovative up-to-date High-end Luxury and Antiques
-  insurance company. Sanlam Platinum Plus is a newly formed division of Sanlam
-  Insurance Company. Our objective is to insure your ‘high-end’ items that are
-  not common commodity insured goods for example your highly-priced jewelry, or
-  handed-down inherited heirloom jewelry that is priceless or of sentimental
-  value, or rare art or antique collector’s items.
-</p>
+{% extends 'base.html' %} {% block style %}
+<style>
+  body {
+    background-image: url('/static/about.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+</style>
+{% endblock %} {% block body%}
+<div>
+  <h1>About</h1>
+  <p>
+    Sanlam Platinum Plus ia an innovative up-to-date High-end Luxury and
+    Antiques insurance company. Sanlam Platinum Plus is a newly formed division
+    of Sanlam Insurance Company. Our objective is to insure your ‘high-end’
+    items that are not common commodity insured goods for example your
+    highly-priced jewelry, or handed-down inherited heirloom jewelry that is
+    priceless or of sentimental value, or rare art or antique collector’s items.
+  </p>
+</div>
 
 {% endblock %}
