--- a/templates/account.html
+++ b/templates/account.html
@@ -1,15 +1,25 @@
 {% extends 'base.html' %} {% block style %}
-<link rel="stylesheet" href="/static/css/account.css">
+<link rel="stylesheet" href="/static/css/account.css" />
+
+<style>
+  body {
+    background-image: url('/static/background2.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+</style>
+
 {% endblock %} {% block body%}
 <h1 class="Account-heading">Account</h1>
 <div class="card center">
   <p class="account-icon-container">
-  <i class=" fa-solid fa-circle-user fa-xl account-icon"></i>
+    <i class="fa-solid fa-circle-user fa-xl account-icon"></i>
   </p>
   <div class="account-details">
     <p class="Content-title">ID Number:</p>
-    <p>{{user.ID}}</p> 
-    <p class="Content-title">Full name: </p>
+    <p>{{user.ID}}</p>
+    <p class="Content-title">Full name:</p>
     <p>{{user.name}} {{user.surname}}</p>
     <p class="Content-title">Email:</p>
     <p>{{user.email}}</p>
@@ -18,7 +28,11 @@
   </div>
 </div>
 <div class="account-button-container">
-  <button class="btn button" data-bs-toggle="modal" data-bs-target="#EmailModal">
+  <button
+    class="btn button"
+    data-bs-toggle="modal"
+    data-bs-target="#EmailModal"
+  >
     Update Email
   </button>
   <button
@@ -51,7 +65,9 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header popup-model-header">
-        <h1 class="modal-title fs-5 popup-heading" id="EmailModalLabel">Change Email</h1>
+        <h1 class="modal-title fs-5 popup-heading" id="EmailModalLabel">
+          Change Email
+        </h1>
         <button
           type="button"
           class="btn-close"
@@ -65,18 +81,19 @@
           {{ email_form.hidden_tag() }}
           <div class="form-group">
             {{email_form.email.label}}
-            <br/> 
+            <br />
             {{email_form.email()}}
-            <br/>
-            {% if email_form.email.errors %} 
-            {% for error in email_form.email.errors %}
-              <div class="error-message error-color">{{error}}</div>
-            {% endfor %} 
-            {% endif %}
+            <br />
+            {% if email_form.email.errors %} {% for error in
+            email_form.email.errors %}
+            <div class="error-message error-color">{{error}}</div>
+            {% endfor %} {% endif %}
           </div>
         </div>
 
-        <div class="modal-footer">{{email_form.submit(class='btn button popup-button')}}</div>
+        <div class="modal-footer">
+          {{email_form.submit(class='btn button popup-button')}}
+        </div>
       </form>
     </div>
   </div>
@@ -106,20 +123,20 @@
 
       <form action="" method="POST">
         <div class="modal-body">
-          {% if contact_form.cont_num.errors %} 
-          {% for error in contact_form.cont_num.errors %}
-            <div class="error-message error-color">{{error}}</div>
-          {% endfor %} 
-          {% endif %}
-          {{ contact_form.hidden_tag() }}
+          {% if contact_form.cont_num.errors %} {% for error in
+          contact_form.cont_num.errors %}
+          <div class="error-message error-color">{{error}}</div>
+          {% endfor %} {% endif %} {{ contact_form.hidden_tag() }}
           <div class="form-group">
             {{contact_form.cont_num.label}}
-            <br> 
+            <br />
             {{contact_form.cont_num()}}
           </div>
         </div>
 
-        <div class="modal-footer">{{contact_form.submit(class='btn button popup-button')}}</div>
+        <div class="modal-footer">
+          {{contact_form.submit(class='btn button popup-button')}}
+        </div>
       </form>
     </div>
   </div>
@@ -149,33 +166,32 @@
 
       <form action="" method="POST">
         <div class="modal-body">
-          
-          {{ password_form.hidden_tag() }} 
+          {{ password_form.hidden_tag() }}
           <div class="form-group">
             {{password_form.password.label}}
             <br />
             {{password_form.password()}}
-            <br>
-            {% if password_form.password.errors %} 
-            {% for error in password_form.password.errors %}
-              <div class="error-message error-color">{{error}}</div>
-            {% endfor %} 
-            {% endif %}
+            <br />
+            {% if password_form.password.errors %} {% for error in
+            password_form.password.errors %}
+            <div class="error-message error-color">{{error}}</div>
+            {% endfor %} {% endif %}
           </div>
           <div class="form-group">
-            {{password_form.new_password.label}} 
-            <br>
+            {{password_form.new_password.label}}
+            <br />
             {{password_form.new_password()}}
-            <br>
-            {% if password_form.new_password.errors %} 
-            {% for error in password_form.new_password.errors %}
-              <div class="error-message error-color">{{error}}</div>
-            {% endfor %} 
-            {% endif %}
+            <br />
+            {% if password_form.new_password.errors %} {% for error in
+            password_form.new_password.errors %}
+            <div class="error-message error-color">{{error}}</div>
+            {% endfor %} {% endif %}
           </div>
         </div>
 
-        <div class="modal-footer">{{password_form.submit(class='btn button popup-button')}}</div>
+        <div class="modal-footer">
+          {{password_form.submit(class='btn button popup-button')}}
+        </div>
       </form>
     </div>
   </div>
