--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -20,7 +23,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style.css" />
     {% block style %} {% endblock %}
   </head>
   <body>
@@ -87,42 +90,56 @@
           <a
             class="btn btn-success my-2 my-sm-0 nav-right-item"
             href="/registration"
-            {% if lg_user %}
+            {%
+            if
+            lg_user
+            %}
             hidden
-            {% endif %}
+            {%
+            endif
+            %}
           >
             Register
           </a>
           <a
             class="btn btn-success my-2 my-sm-0 nav-right-item"
             href="/login"
-            {% if lg_user %}
+            {%
+            if
+            lg_user
+            %}
             hidden
-            {% endif %}
+            {%
+            endif
+            %}
           >
             Login
           </a>
         </div>
       </div>
     </nav>
-    <div class="empty-nav">
-
-    </div>
+    <div class="empty-nav"></div>
 
     <div class="flash-container">
-      {% with messages = get_flashed_messages() %} 
-      {% if messages %} 
-      {% for message in messages %}
+      {% with messages = get_flashed_messages() %} {% if messages %} {% for
+      message in messages %}
       <div class="flashes alert alert-info" role="alert">
         <p class="flash-message">{{ message }}</p>
       </div>
-      {% endfor %} 
-      {% endif %} 
-      {% endwith %}
+      {% endfor %} {% endif %} {% endwith %}
     </div>
 
     {% block body %} {% endblock %}
 
+    <!-- <footer>
+      <p>Copyright © 2024</p>
+      <p>
+        Sanlam Limited is the licensed controlling company of the Sanlam Limited
+        Insurance Group. Sanlam Life Insurance Limited is an insurer licensed to
+        conduct life insurance business and is a licensed financial services
+        provider and a registered credit provider.
+      </p>
+    </footer> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
