--- a/templates/claim.html
+++ b/templates/claim.html
@@ -1,17 +1,78 @@
-{% extends 'base.html' %} {% block style %} {% endblock %} {% block body%}
-<h1>Claim</h1>
-<h2>Claim No: {{claim.claim_number}}</h2>
-<p>claim date: {{claim.claim_date}}</p>
-<p>Policy Number: {{claim.policy_number}}</p>
-<p>Classic Car</p>
-<p>Make: {{classic_car.vehicle_make}}</p>
-<p>Model: {{classic_car.model}}</p>
-<p>Model: {{classic_car.license_plate_number}}</p>
-<p>Incident date: {{claim.date_incident_occurred}}</p>
-<p>Police claim number: {{claim.police_claim_number}}</p>
-<p>Incident description:</p>
-<p>{{claim.claim_description}}</p>
-<h3>Status</h3>
-{% for status in statuses %}
-<p>{{status.status_name}} <span>{{status.status_date}}</span></p>
-{% endfor %} {% endblock %}
+{% extends 'base.html' %} {% block style %}
+<style>
+  body {
+    background-image: url('/static/background2.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+  .claim-list-item {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .all-status {
+    margin-bottom: 20px;
+  }
+  .card-claim-form {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+  }
+  .bold-item-data {
+    font-weight: bold;
+  }
+  .items-details-data {
+    display: grid;
+    column-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    width: 340px;
+  }
+  .status-info {
+    margin-right: 70px;
+    font-weight: bold;
+  }
+  .single-claim-button {
+    width: 100px;
+  }
+</style>
+{% endblock %} {% block body%}
+<h1 class="all-heading heading-background">Claim</h1>
+<div class="card card-claim-form">
+  <h2><span class="bold-item-data">Claim No:</span> {{claim.claim_number}}</h2>
+  <div class="items-details-data">
+    <p class="bold-item-data">claim date:</p>
+    <p>{{claim.claim_date}}</p>
+    <p class="bold-item-data">Policy Number:</p>
+    <p>{{claim.policy_number}}</p>
+  </div>
+  <p class="bold-item-data">Classic Car</p>
+  <div class="items-details-data">
+    <p class="bold-item-data">Make:</p>
+    <p>{{classic_car.vehicle_make}}</p>
+    <p class="bold-item-data">Model:</p>
+    <p>{{classic_car.model}}</p>
+    <p class="bold-item-data">license_plate_number:</p>
+    <p>{{classic_car.license_plate_number}}</p>
+    <p class="bold-item-data">Incident date:</p>
+    <p>{{claim.date_incident_occurred}}</p>
+    <p class="bold-item-data">Police claim number:</p>
+    <p>{{claim.police_claim_number}}</p>
+  </div>
+  <p class="bold-item-data">Incident description:</p>
+  <p>{{claim.claim_description}}</p>
+</div>
+<div class="all-status">
+  <h3 class="all-heading heading-background">Status</h3>
+  <ul class="list-group">
+    {% for status in statuses %}
+    <li class="list-group-item claim-list-item">
+      <span class="status-info"> {{status.status_date}} </span>
+      {{status.status_name}}
+    </li>
+    {% endfor %}
+  </ul>
+</div>
+<a class="btn form-button single-claim-button" href="/all-claims">back</a>
+{% endblock %}
