--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,13 @@
-{% extends 'base.html' %} {% block body%}
+{% extends 'base.html' %} {% block style %}
+<style>
+  body {
+    background-image: url('/static/moving-car.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+</style>
+{% endblock %} {% block body%}
 
 <h1>Contact</h1>
 <ul>
