--- a/templates/quote.html
+++ b/templates/quote.html
@@ -1,34 +1,91 @@
-{% extends 'base.html' %} {% block style %} {% endblock %} {% block body%}
-<h1>Quote</h1>
-<h2>No: {{quote.quote_id}}</h2>
-<p>Date: {{quote.quote_date}}</p>
-<p>Category: {{category.category_name}}</p>
-<p>Classic car:</p>
-<p>Make: {{item.vehicle_make}}</p>
-<p>Model: {{item.model}}</p>
-<p>Model Year: {{item.year_model}}</p>
-<p>Vin: {{item.vin}}</p>
-<p>License plate number: {{item.license_plate_number}}</p>
-<p>Odometer Reading: {{item.odometer_reading}}</p>
-<p>Fuel type: {{item.fuel_type}}</p>
-<p>Color: {{item.color}}</p>
-<p>Vehicle value: {{item.current_value}}</p>
-<p>Year purchased: {{item.year_purchased}}</p>
-<p>{{"R{:,.2f}".format(quote.quoted_premium).replace(',',' ')}} p/Month</p>
+{% extends 'base.html' %} {% block style %}
+<style>
+  .card-claim-form {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+  }
+  .bold-item-data {
+    font-weight: bold;
+  }
+  .items-details-data {
+    display: grid;
+    column-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    width: 340px;
+  }
+  .button-single-item {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    background-color: #333e48;
+    color: #ffffff;
+  }
+  .button-single-item:hover {
+    background-color: #0076be;
+    color: #ffffff;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+  .buttons-container-single-item {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+</style>
+{% endblock %} {% block body%}
+<h1 class="all-heading heading-background">Quote</h1>
+<div class="card card-claim-form">
+  <h2><span class="bold-item-data">No:</span> {{quote.quote_id}}</h2>
+  <div class="items-details-data">
+    <p class="bold-item-data">Date:</p>
+    <p>{{quote.quote_date}}</p>
+    <p class="bold-item-data">Category:</p>
+    <p>{{category.category_name}}</p>
+  </div>
+  <p class="bold-item-data">Classic car:</p>
+  <div class="items-details-data">
+    <p class="bold-item-data">Make:</p>
+    <p>{{item.vehicle_make}}</p>
+    <p class="bold-item-data">Model:</p>
+    <p>{{item.model}}</p>
+    <p class="bold-item-data">Model Year:</p>
+    <p>{{item.year_model}}</p>
+    <p class="bold-item-data">Vin:</p>
+    <p>{{item.vin}}</p>
+    <p class="bold-item-data">License plate number:</p>
+    <p>{{item.license_plate_number}}</p>
+    <p class="bold-item-data">Odometer Reading:</p>
+    <p>{{item.odometer_reading}}</p>
+    <p class="bold-item-data">Fuel type:</p>
+    <p>{{item.fuel_type}}</p>
+    <p class="bold-item-data">Color:</p>
+    <p>{{item.color}}</p>
+    <p class="bold-item-data">Vehicle value:</p>
+    <p>{{item.current_value}}</p>
+    <p class="bold-item-data">Year purchased:</p>
+    <p>{{item.year_purchased}}</p>
+  </div>
+  <h4 class="bold-item-data">
+    {{"R{:,.2f}".format(quote.quoted_premium).replace(',',' ')}} p/Month
+  </h4>
+  <div class="buttons-container-single-item">
+    <a class="btn button-single-item" href="/quote/all-quotes">Back</a>
+    <form
+      action="{{url_for('classic_cars_quote.accept_classic_car_quote_user')}}"
+      method="POST"
+    >
+      <input type="text" name="quote_id" value="{{quote.quote_id}}" hidden />
+      <input type="text" name="vehicle_id" value="{{item.vehicle_id}}" hidden />
+      <button class="btn button-single-item" type="submit">Accept</button>
+    </form>
+    <form
+      action="{{url_for('classic_cars_quote.delete_classic_car_quote_user')}}"
+      method="POST"
+    >
+      <input type="text" name="quote_id" value="{{quote.quote_id}}" hidden />
+      <button class="btn button-single-item" type="submit">Decline</button>
+    </form>
+  </div>
+</div>
 
-<form
-  action="{{url_for('classic_cars_quote.accept_classic_car_quote_user')}}"
-  method="POST"
->
-  <input type="text" name="quote_id" value="{{quote.quote_id}}" hidden />
-  <input type="text" name="vehicle_id" value="{{item.vehicle_id}}" hidden />
-  <button>Accept</button>
-</form>
-<form
-  action="{{url_for('classic_cars_quote.delete_classic_car_quote_user')}}"
-  method="POST"
->
-  <input type="text" name="quote_id" value="{{quote.quote_id}}" hidden />
-  <button type="submit">Decline</button>
-</form>
 {% endblock %}
