--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,78 +1,77 @@
-{% extends 'base.html' %} 
-
-{% block body%}
+{% extends 'base.html' %} {% block style %}
+<style>
+  body {
+    background-image: url('/static/login.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+</style>
+{% endblock %} {% block body%}
 <div class="login-sign-up-form-container">
-
-  <h1 class="all-heading">Registration</h1>
   <form class="card form-container" action="" method="POST">
+    <h1 class="all-heading">Registration</h1>
     <!-- hidden input field -->
-    {{form.hidden_tag()}} 
+    {{form.hidden_tag()}}
     <!-- actual register -->
     <div class="form-group input-form-group">
-      {% if form.user_id.errors %}{{form.user_id.label(class='error-color')}} {% else %} {{form.user_id.label}}{% endif %}:<br />
-      {{form.user_id(class='input-width', placeholder="")}} 
+      {% if form.user_id.errors %}{{form.user_id.label(class='error-color')}} {%
+      else %} {{form.user_id.label}}{% endif %}:<br />
+      {{form.user_id(class='input-width', placeholder="")}}
       <br />
-      {% if form.user_id.errors %} 
-      {% for error in form.user_id.errors %}
-        <div class="error-message error-color">{{error}}</div>
-      {% endfor %} 
-      {% endif %} 
+      {% if form.user_id.errors %} {% for error in form.user_id.errors %}
+      <div class="error-message error-color">{{error}}</div>
+      {% endfor %} {% endif %}
     </div>
     <div class="form-group input-form-group">
-      {% if form.name.errors %}{{form.name.label(class='error-color')}} {% else %} {{form.name.label}}{% endif %}:
+      {% if form.name.errors %}{{form.name.label(class='error-color')}} {% else
+      %} {{form.name.label}}{% endif %}:
       <br />
-      {{form.name(class='input-width', placeholder="")}} 
+      {{form.name(class='input-width', placeholder="")}}
       <br />
-      {% if form.name.errors %} 
-      {% for error in form.name.errors %}
-        <div class="error-message error-color">{{error}}</div>
-      {% endfor %} 
-      {% endif %} 
+      {% if form.name.errors %} {% for error in form.name.errors %}
+      <div class="error-message error-color">{{error}}</div>
+      {% endfor %} {% endif %}
     </div>
     <div class="form-group input-form-group">
-      {% if form.surname.errors %}{{form.surname.label(class='error-color')}} {% else %} {{form.surname.label}}{% endif %}: 
+      {% if form.surname.errors %}{{form.surname.label(class='error-color')}} {%
+      else %} {{form.surname.label}}{% endif %}:
       <br />
-      {{form.surname(class='input-width', placeholder="")}} 
+      {{form.surname(class='input-width', placeholder="")}}
       <br />
-      {% if form.surname.errors %} 
-      {% for error in form.surname.errors %}
-        <div class="error-message error-color">{{error}}</div>
-      {% endfor %} 
-      {% endif %} 
-  
+      {% if form.surname.errors %} {% for error in form.surname.errors %}
+      <div class="error-message error-color">{{error}}</div>
+      {% endfor %} {% endif %}
     </div>
     <div class="form-group input-form-group">
-      {% if form.email.errors %}{{form.email.label(class='error-color')}} {% else %} {{form.email.label}}{% endif %}:  
+      {% if form.email.errors %}{{form.email.label(class='error-color')}} {%
+      else %} {{form.email.label}}{% endif %}:
       <br />
-      {{form.email(class='input-width', placeholder="")}} 
+      {{form.email(class='input-width', placeholder="")}}
       <br />
-      {% if form.email.errors %} 
-      {% for error in form.email.errors %}
-        <div class="error-message error-color">{{error}}</div>
-      {% endfor %} 
-      {% endif %} 
+      {% if form.email.errors %} {% for error in form.email.errors %}
+      <div class="error-message error-color">{{error}}</div>
+      {% endfor %} {% endif %}
     </div>
     <div class="form-group input-form-group">
-      {% if form.cell_no.errors %}{{form.cell_no.label(class='error-color')}} {% else %} {{form.cell_no.label}}{% endif %}:   
+      {% if form.cell_no.errors %}{{form.cell_no.label(class='error-color')}} {%
+      else %} {{form.cell_no.label}}{% endif %}:
       <br />
-      {{form.cell_no(class='input-width', placeholder="")}} 
+      {{form.cell_no(class='input-width', placeholder="")}}
       <br />
-      {% if form.cell_no.errors %} 
-      {% for error in form.cell_no.errors %}
-        <div class="error-message error-color">{{error}}</div>
-      {% endfor %} 
-      {% endif %} 
+      {% if form.cell_no.errors %} {% for error in form.cell_no.errors %}
+      <div class="error-message error-color">{{error}}</div>
+      {% endfor %} {% endif %}
     </div>
     <div class="form-group input-form-group">
-      {% if form.password.errors %}{{form.password.label(class='error-color')}} {% else %} {{form.password.label}}{% endif %}:
+      {% if form.password.errors %}{{form.password.label(class='error-color')}}
+      {% else %} {{form.password.label}}{% endif %}:
       <br />
-      {{form.password(class='input-width')}} 
+      {{form.password(class='input-width')}}
       <br />
-      {% if form.password.errors %} 
-      {% for error in form.password.errors %}
-        <div class="error-message error-color">{{error}}</div>
-      {% endfor %} 
-      {% endif %} 
+      {% if form.password.errors %} {% for error in form.password.errors %}
+      <div class="error-message error-color">{{error}}</div>
+      {% endfor %} {% endif %}
     </div>
     {{form.submit(class='btn form-button')}}<br />
   </form>
