--- a/templates/about.html
+++ b/templates/about.html
@@ -1,23 +1,46 @@
 {% extends 'base.html' %} {% block style %}
 <style>
+  .landing-div {
+    width: 90%;
+    height: 100 vh;
+    color: white;
+    background-color: rgba(19, 19, 19, 0.7);
+  }
   body {
     background-image: url('/static/about.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
   }
+  .background {
+    font-size: large;
+    margin: 10px;
+    margin-left: 15px;
+    padding: 20px;
+  }
+  .landing-heading {
+    font-size: 50px;
+  }
 </style>
 {% endblock %} {% block body%}
-<div>
-  <h1>About</h1>
-  <p>
-    Sanlam Platinum Plus ia an innovative up-to-date High-end Luxury and
-    Antiques insurance company. Sanlam Platinum Plus is a newly formed division
-    of Sanlam Insurance Company. Our objective is to insure your ‘high-end’
-    items that are not common commodity insured goods for example your
-    highly-priced jewelry, or handed-down inherited heirloom jewelry that is
-    priceless or of sentimental value, or rare art or antique collector’s items.
-  </p>
+<div class="landing-div">
+  <h1 class="all-heading landing-heading">About</h1>
+  <div class="background">
+    <p>
+      Sanlam Platinum Plus ia an innovative up-to-date High-end Luxury and
+      Antiques insurance company.
+    </p>
+    <p>
+      Sanlam Platinum Plus is a newly formed division of Sanlam Insurance
+      Company.
+    </p>
+    <p>
+      Our objective is to insure your ‘high-end’ items that are not common
+      commodity insured goods for example your highly-priced jewelry, or
+      handed-down inherited heirloom jewelry that is priceless or of sentimental
+      value, or rare art or antique collector’s items.
+    </p>
+  </div>
 </div>
 
 {% endblock %}
