changed size of inputs

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -41,6 +41,9 @@
     color: #0076be;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
+  .input-text {
+    width: 300px;
+  }
   @media (min-width: 515px) {
     .landing-div {
       width: 70%;
@@ -58,16 +61,16 @@
   <form class="background">
     <div class="form-group">
       <label>Name</label><br />
-      <input type="Text" />
+      <input class="input-text" type="Text" />
     </div>
     <div class="form-group">
       <label>email</label><br />
-      <input type="Text" />
+      <input class="input-text" type="Text" />
     </div>
     <div class="form-group">
       <label>Cell Number</label>
       <br />
-      <input type="Text" />
+      <input class="input-text" type="Text" />
     </div>
     <br />
     <button class="btn contact-button">Contact me</button>
