--- a/templates/all-claims.html
+++ b/templates/all-claims.html
@@ -1,12 +1,5 @@
 {% extends 'base.html' %} {% block style %}
-<style>
-  body {
-    background-image: url('/static/background2.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-  }
-</style>
+<style></style>
 {% endblock %} {% block body%}
 <h2 class="all-heading heading-background">All Claims</h2>
 {% for claim, policy, classic_car in claims_data %}
