--- a/templates/policy.html
+++ b/templates/policy.html
@@ -4,40 +4,95 @@
     display: none;
     pointer-events: none;
   }
+  .card-claim-form {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+  }
+  .bold-item-data {
+    font-weight: bold;
+  }
+  .items-details-data {
+    display: grid;
+    column-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    width: 340px;
+  }
+  .button-single-item {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    background-color: #333e48;
+    color: #ffffff;
+  }
+  .button-single-item:hover {
+    background-color: #0076be;
+    color: #ffffff;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+  .buttons-container-single-item {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 </style>
 {% endblock %} {% block body%}
 <div>
-  <h1>Policy</h1>
-  <h2>Policy No: {{policy.policy_number}}</h2>
-  <p>Date: {{policy.policy_date}}</p>
-  {% if not policy.active %}
-  <p>End Date:{{policy.policy_end_date}}</p>
-  {% endif %}
-  <p>Classic car:</p>
-  <p>Make: {{item.vehicle_make}}</p>
-  <p>Model: {{item.model}}</p>
-  <p>Model Year: {{item.year_model}}</p>
-  <p>Vin: {{item.vin}}</p>
-  <p>License plate number: {{item.license_plate_number}}</p>
-  <p>Odometer Reading: {{item.odometer_reading}}</p>
-  <p>Fuel type: {{item.fuel_type}}</p>
-  <p>Color: {{item.color}}</p>
-  <p>Vehicle value: {{item.current_value}}</p>
-  <p>Year purchased: {{item.year_purchased}}</p>
-  <p>{{"R{:,.2f}".format(policy.monthly_premium).replace(',',' ')}} p/Month</p>
-  <form
-    class="{% if not policy.active %}form-policy-invisible{% endif %}"
-    action="{{url_for('classic_cars_policy.delete_user_specific_policies')}}"
-    method="POST"
-  >
-    <input
-      type="text"
-      name="policy_number"
-      value="{{policy.policy_number}}"
-      hidden
-    />
-    <button type="submit">End Policy</button>
-  </form>
-  <a href="/all-policies/">back</a>
+  <h1 class="all-heading heading-background">Policy</h1>
+  <div class="card card-claim-form">
+    <h2>
+      <span class="bold-item-data">Policy No: </span>{{policy.policy_number}}
+    </h2>
+    <div class="items-details-data">
+      <p class="bold-item-data">Date:</p>
+      <p>{{policy.policy_date}}</p>
+      {% if not policy.active %}
+      <p class="bold-item-data">End Date:</p>
+      <p class="bold-item-data">{{policy.policy_end_date}}</p>
+      {% endif %}
+    </div>
+    <h4 class="bold-item-data">Classic car:</h4>
+    <div class="items-details-data">
+      <p class="bold-item-data">Make:</p>
+      <p>{{item.vehicle_make}}</p>
+      <p class="bold-item-data">Model:</p>
+      <p>{{item.model}}</p>
+      <p class="bold-item-data">Model Year:</p>
+      <p>{{item.year_model}}</p>
+      <p class="bold-item-data">Vin:</p>
+      <p>{{item.vin}}</p>
+      <p class="bold-item-data">License plate number:</p>
+      <p>{{item.license_plate_number}}</p>
+      <p class="bold-item-data">Odometer Reading:</p>
+      <p>{{item.odometer_reading}}</p>
+      <p class="bold-item-data">Fuel type:</p>
+      <p>{{item.fuel_type}}</p>
+      <p class="bold-item-data">Color:</p>
+      <p>{{item.color}}</p>
+      <p class="bold-item-data">Vehicle value:</p>
+      <p>{{item.current_value}}</p>
+      <p class="bold-item-data">Year purchased:</p>
+      <p>{{item.year_purchased}}</p>
+    </div>
+    <h4 class="bold-item-data">
+      {{"R{:,.2f}".format(policy.monthly_premium).replace(',',' ')}} p/Month
+    </h4>
+    <div class="buttons-container-single-item">
+      <a class="btn button-single-item" href="/all-policies/">back</a>
+      <form
+        class="{% if not policy.active %}form-policy-invisible{% endif %}"
+        action="{{url_for('classic_cars_policy.delete_user_specific_policies')}}"
+        method="POST"
+      >
+        <input
+          type="text"
+          name="policy_number"
+          value="{{policy.policy_number}}"
+          hidden
+        />
+        <button class="btn button-single-item" type="submit">End Policy</button>
+      </form>
+    </div>
+  </div>
 </div>
 {% endblock %}
