change heading redirect

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
   <body>
     <nav class="navbar fixed-top navbar-expand-lg nav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Platinum Plus</a>
+        <a class="navbar-brand" href="/">Platinum Plus</a>
         <button
           class="navbar-toggler"
           type="button"
