--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,8 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  min-height: 100vh; 
+  margin:0;
 }
 
 /* Nav Bar */
