--- a/templates/about.html
+++ b/templates/about.html
@@ -1,27 +1,5 @@
 {% extends 'base.html' %} {% block style %}
-<style>
-  .landing-div {
-    width: 90%;
-    height: 100 vh;
-    color: white;
-    background-color: rgba(19, 19, 19, 0.7);
-  }
-  body {
-    background-image: url('/static/about.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-  }
-  .background {
-    font-size: large;
-    margin: 10px;
-    margin-left: 15px;
-    padding: 20px;
-  }
-  .landing-heading {
-    font-size: 50px;
-  }
-</style>
+<link rel="stylesheet" href="/static/css/about.css" />
 {% endblock %} {% block body%}
 <div class="landing-div">
   <h1 class="all-heading landing-heading">About</h1>
