--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,60 +1,5 @@
 {% extends 'base.html' %} {% block style %}
-<style>
-  .landing-div {
-    width: 90%;
-    height: 100 vh;
-    color: white;
-    background-color: rgba(19, 19, 19, 0.7);
-  }
-  body {
-    background-image: url('/static/moving-car.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-  }
-  .background {
-    font-size: large;
-    margin: 10px;
-    margin-left: 15px;
-    padding: 20px;
-  }
-  .landing-heading {
-    font-size: 50px;
-  }
-  .background {
-    font-size: large;
-    margin: 10px;
-    margin-left: 15px;
-    padding: 20px;
-  }
-  .contact-details {
-    margin: 30px;
-    padding-bottom: 40px;
-  }
-  .contact-button {
-    max-width: 150px;
-    background-color: #0076be;
-    color: #ffffff;
-  }
-  .contact-button:hover {
-    background-color: #ffffff;
-    color: #0076be;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  }
-  .input-text {
-    width: 300px;
-  }
-  @media (min-width: 515px) {
-    .landing-div {
-      width: 70%;
-    }
-  }
-  @media (min-width: 768px) {
-    .landing-div {
-      width: 50%;
-    }
-  }
-</style>
+<link rel="stylesheet" href="/static/css/contact.css" />
 {% endblock %} {% block body%}
 <div class="landing-div">
   <h1 class="all-heading landing-heading">Contact</h1>
