--- a/templates/all-claims.html
+++ b/templates/all-claims.html
@@ -1,6 +1,7 @@
-{% extends 'base.html' %} {% block style %}
-<style></style>
-{% endblock %} {% block body%}
+{% extends 'base.html' %} 
+{% block style %}
+{% endblock %} 
+{% block body%}
 <h2 class="all-heading heading-background">All Claims</h2>
 {% for claim, policy, classic_car in claims_data %}
 <div class="card all-items-container">
