--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,12 +1,5 @@
 {% extends 'base.html' %} {% block style %}
-<style>
-  body {
-    background-image: url('/static/login.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-  }
-</style>
+<link rel="stylesheet" href="/static/css/about.css" />
 {% endblock %} {% block body%}
 <div class="login-sign-up-form-container">
   <form class="card form-container" action="" method="POST">
