change background image

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block style %}
-<link rel="stylesheet" href="/static/css/about.css" />
+<link rel="stylesheet" href="/static/css/login-register.css" />
 {% endblock %} {% block body%}
 <div class="login-sign-up-form-container">
   <form class="card form-container" action="" method="POST">
