--- a/templates/all-claims.html
+++ b/templates/all-claims.html
@@ -1,11 +1,9 @@
-{% extends 'base.html' %} 
-{% block style %}
-{% endblock %} 
-{% block body%}
+{% extends 'base.html' %} {% block style %} {% endblock %} {% block body%}
 <h2 class="all-heading heading-background">All Claims</h2>
 {% for claim, policy, classic_car in claims_data %}
 <div class="card all-items-container">
   <h5>Claim No: {{claim.claim_number}}</h5>
+  <p>Claim Date: {{claim.claim_date}}</p>
   <p>Policy No: {{policy.policy_number}}</p>
   <p>Make: {{classic_car.vehicle_make}}</p>
   <p>Model: {{classic_car.model}}</p>
