--- a/templates/claim.html
+++ b/templates/claim.html
@@ -25,6 +25,9 @@
   </div>
   <p class="bold-item-data">Incident description:</p>
   <p>{{claim.claim_description}}</p>
+  {% if claim.claim_amount %}
+  <h4>{{claim.claim_amount}}</h4>
+  {% endif %}
 </div>
 <div class="all-status">
   <h3 class="all-heading heading-background">Status</h3>
