--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
   <h1 class="all-heading landing-heading">About</h1>
   <div class="background">
     <p>
-      Sanlam Platinum Plus ia an innovative up-to-date High-end Luxury and
+      Sanlam Platinum Plus is an innovative up-to-date High-end Luxury and
       Antiques insurance company.
     </p>
     <p>
