--- a/static/css/single-item.css
+++ b/static/css/single-item.css
@@ -1,54 +1,62 @@
+.claim-list-item {
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.all-status {
+  margin-bottom: 20px;
+}
+.card-claim-form {
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+}
+.bold-item-data {
+  font-weight: bold;
+}
+.items-details-data {
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: 1fr 1fr;
+  width: 340px;
+}
 
-  .claim-list-item {
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .all-status {
-    margin-bottom: 20px;
-  }
-  .card-claim-form {
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px;
-  }
-  .bold-item-data {
-    font-weight: bold;
-  }
+.button-single-item {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  background-color: #333e48;
+  color: #ffffff;
+}
+.button-single-item:hover {
+  background-color: #0076be;
+  color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.buttons-container-single-item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+/* Claim specific */
+.single-claim-button {
+  width: 100px;
+}
+.status-info {
+  margin-right: 70px;
+  font-weight: bold;
+}
+/* Policy specific */
+.form-policy-invisible {
+  display: none;
+  pointer-events: none;
+}
+
+@media (min-width: 768px) {
   .items-details-data {
-    display: grid;
+    padding-left: 40px;
     column-gap: 20px;
-    grid-template-columns: 1fr 1fr;
-    width: 340px;
-  }
 
-  .button-single-item {
-    margin-top: 10px;
-    margin-bottom: 20px;
-    background-color: #333e48;
-    color: #ffffff;
+    width: 700px;
   }
-  .button-single-item:hover {
-    background-color: #0076be;
-    color: #ffffff;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  }
-  .buttons-container-single-item {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  /* Claim specific */
-  .single-claim-button {
-    width: 100px;
-  }
-  .status-info {
-    margin-right: 70px;
-    font-weight: bold;
-  }
-  /* Policy specific */
-  .form-policy-invisible {
-    display: none;
-    pointer-events: none;
-  }
+}
