--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,8 +5,8 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  min-height: 100vh; 
-  margin:0;
+  min-height: 100vh;
+  margin: 0;
 }
 
 /* Nav Bar */
@@ -272,6 +272,9 @@ body {
   background-color: #0076be;
   color: #ffffff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.bold_item_text {
+  font-weight: bold;
 }
 
 @media (min-width: 515px) {
