Fixing pages document names

--- a/templates/account.html
+++ b/templates/account.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block style %}
+{% extends 'base.html' %} {% block docName %}Account{% endblock %} {% block
+style %}
 <link rel="stylesheet" href="/static/css/account.css" />
 
 {% endblock %} {% block body%}
