--- a/templates/all-claims.html
+++ b/templates/all-claims.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block style %} {% endblock %} {% block body%}
+{% extends 'base.html' %} {% block docName %}All Claims {% endblock %} {% block
+style %} {% endblock %} {% block body%}
 <h2 class="all-heading heading-background">All Claims</h2>
 {% for claim, policy, classic_car in claims_data %}
 <div class="card all-items-container">
