--- a/templates/all-polices.html
+++ b/templates/all-polices.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block style %} {% endblock %} {% block body%}
+{% extends 'base.html' %} {% block docName %}All Polices {% endblock %} {% block
+style %} {% endblock %} {% block body%}
 
 <!-- Actual policy code -->
 <div class="polices-container">
