--- a/templates/all-quotes.html
+++ b/templates/all-quotes.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block style %} {% endblock %} {% block body%}
+{% extends 'base.html' %} {% block docName %}All Quotes {% endblock %} {% block
+style %} {% endblock %} {% block body%}
 <h2 class="all-heading heading-background">All Quotes</h2>
 <h3 class="all-category-heading heading-background">Classic Cars:</h3>
 {% for car_quote, quote, classic_car in quotes_data %}
