--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block style %} {% endblock %} {% block body%}
+{% extends 'base.html' %}
+{% block docName %}Dashboard {% endblock %}
+{% block style %} {% endblock %} {% block body%}
 <div class="card dashboard-card">
   <h2 class="dashboard-heading">Welcome {{user.name}} {{user.surname}}</h2>
 
