--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,12 +1,13 @@
-{% extends 'base.html' %} {% block body%} {% block style %}
+{% extends 'base.html' %} {% block docName %}Platinum Plus {% endblock %} {%
+block style %}
 <link rel="stylesheet" href="/static/css/landingpages.css" />
-{% endblock %}
+{% endblock %} {% block body%}
 <div class="landing-div">
   <h1 class="all-heading landing-heading">Platinum Plus</h1>
   <div class="background">
     <p>
-      <span class="landing-page-bold">Sanlam Platinum Plus </span>is a insurance
-      provider for top end Luxury and antique items.
+      <span class="landing-page-bold">Sanlam Platinum Plus </span>is an
+      insurance provider for top end Luxury and antique items.
     </p>
   </div>
 
