--- a/templates/new-classic-cars-quote.html
+++ b/templates/new-classic-cars-quote.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %} {% block style %}
-{% endblock %} {% block body%}
+{% extends 'base.html' %} {% block docName %}Classic Car{% endblock %} {% block
+style %} {% endblock %} {% block body%}
 <div class="quote-form-container">
   <form class="card form-container" action="" method="POST">
     <h1 class="all-heading">Quote: Classic Car</h1>
