--- a/templates/policy.html
+++ b/templates/policy.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block style %}
+{% extends 'base.html' %} {% block docName %}Policy{% endblock %} {% block style
+%}
 <link rel="stylesheet" href="/static/css/single-item.css" />
 {% endblock %} {% block body%}
 <div>
