--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block style %}
+{% extends 'base.html' %}{% block docName %}About Us {% endblock %} {% block
+style %}
 <link rel="stylesheet" href="/static/css/about.css" />
 {% endblock %} {% block body%}
 <div class="landing-div">
