--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block style %}
+{% extends 'base.html' %} {% block docName %}Login {% endblock %} {% block style
+%}
 <link rel="stylesheet" href="/static/css/login-register.css" />
 {% endblock %} {% block body%}
 <div class="login-sign-up-form-container">
