--- a/templates/new-claim.html
+++ b/templates/new-claim.html
@@ -1,6 +1,5 @@
-{% extends 'base.html' %} {% block style %}
-
-{% endblock %} {% block body%}
+{% extends 'base.html' %} {% block docName %}New Claim {% endblock %} {% block
+style %} {% endblock %} {% block body%}
 <div class="claim-form-container">
   <form class="card form-container" action="" method="POST">
     <h1 class="all-heading">New Claim</h1>
