--- a/templates/quote.html
+++ b/templates/quote.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block style %}
+{% extends 'base.html' %} {% block docName %}Quote{% endblock %} {% block style
+%}
 <link rel="stylesheet" href="/static/css/single-item.css" />
 {% endblock %} {% block body%}
 <h1 class="all-heading heading-background">Quote</h1>
