--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,10 +36,13 @@ style %}
   <br />
   <div class="contact-details">
     <ul>
-      <li>021 947 9111 Ext: 001</li>
+      <li>Tel: 021 947 9111 Ext: 001</li>
       <li>Email us: info@SanlamPlatinumPlus.co.za</li>
-      <li>Sanlam Head Office – Platinum Plus</li>
-      <li>C/O; Sanlam Platinum Plus 2 Strand Road, Bellville</li>
+      <li>Address:</li>
+      <p class="contact-address">Sanlam Head Office – Platinum Plus</p>
+      <p class="contact-address">
+        C/O; Sanlam Platinum Plus 2 Strand Road, Bellville
+      </p>
     </ul>
   </div>
 </div>
