--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -4,7 +4,9 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
-
+.contact-address {
+  margin: 0%;
+}
 .contact-details {
   margin: 30px;
   padding-bottom: 40px;
