--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,8 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
           <div class="logo-container">
-            <img class="logo" src="../static/logo.svg" /> Platinum Plus
+            <img class="logo" src="../static/logo.svg" alt="SANLAM" /> Platinum
+            Plus
           </div>
         </a>
         <button
